force-app/main/default/objects/Settings__c/Settings__c.object-meta.xml
<CustomObject>
    <description>PoolManager settings</description>
    <label>Settings</label>
    <nameField>
        <label>Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>