force-app/main/default/objects/Settings__c/fields/CurrentWeek__c.field-meta.xml
<CustomField>
    <fullName>CurrentWeek__c</fullName>
    <label>Current Week</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>