force-app/main/default/objects/Settings__c/fields/EntryFee__c.field-meta.xml
<CustomField>
    <fullName>EntryFee__c</fullName>
    <description>The pool entry fee</description>
    <inlineHelpText>The pool entry fee</inlineHelpText>
    <label>Entry Fee</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>