force-app/main/default/objects/Settings__c/fields/MaxGames__c.field-meta.xml
<CustomField>
    <fullName>MaxGames__c</fullName>
    <description>The maximum number of games that will ever be played in a week.</description>
    <inlineHelpText>The maximum number of games that will ever be played in a week.</inlineHelpText>
    <label>Maximum Number of Games</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>