force-app/main/default/objects/Settings__c/fields/NumberOfWeeks__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWeeks__c</fullName>
    <description>Number of weeks in the pool &quot;season&quot;.</description>
    <inlineHelpText>Number of weeks in the pool &quot;season&quot;.</inlineHelpText>
    <label>Number of Weeks</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>