force-app/main/default/objects/Settings__c/fields/PoolAccount__c.field-meta.xml
<CustomField>
    <fullName>PoolAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account object that all Users/Contacts in the pool will be associated with.</description>
    <inlineHelpText>The Account object that all Users/Contacts in the pool will be associated with.</inlineHelpText>
    <label>Pool Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settings</relationshipLabel>
    <relationshipName>Settings</relationshipName>
    <type>Lookup</type>
</CustomField>