force-app/main/default/objects/Settings__c/fields/UsernameSuffix__c.field-meta.xml
<CustomField>
    <fullName>UsernameSuffix__c</fullName>
    <description>The string that is used as the default suffix for new usernames. For example nflpool.dev. This will appear in the &quot;Username&quot; field when creating new players.</description>
    <inlineHelpText>The string that is used as the default suffix for new usernames. For example nflpool.dev. This will appear in the &quot;Username&quot; field when creating new players.</inlineHelpText>
    <label>Username Suffix</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>