force-app/main/default/objects/Settings__c/validationRules/Current_Week.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Week</fullName>
    <active>true</active>
    <errorConditionFormula>OR(CurrentWeek__c &lt; 1,  CurrentWeek__c &gt; 18)</errorConditionFormula>
    <errorDisplayField>CurrentWeek__c</errorDisplayField>
    <errorMessage>The current week must be a number between 1 and 18 inclusive.</errorMessage>
</ValidationRule>