force-app/main/default/objects/Settings__c/validationRules/Max_Games.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Games</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MaxGames__c &lt; 1, MaxGames__c &gt; 16)</errorConditionFormula>
    <errorDisplayField>MaxGames__c</errorDisplayField>
    <errorMessage>The maximum number of games must be a number between 1 and 16 inclusive.</errorMessage>
</ValidationRule>