force-app/main/default/objects/Settings__c/validationRules/Number_of_Weeks.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Weeks</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NumberOfWeeks__c &lt; 4, NumberOfWeeks__c &gt; 17)</errorConditionFormula>
    <errorDisplayField>NumberOfWeeks__c</errorDisplayField>
    <errorMessage>The number of weeks must be a number between 4 and 17 inclusive.</errorMessage>
</ValidationRule>